saving jupyter notebook

--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -1671,7 +1671,7 @@
     "data_one_df.hvplot.bar(\n",
     "    xlabel=\"Age Group\",\n",
     "    ylabel=\"% Difference in Average Wealth by Age\",\n",
-    "    y = \"Sample Size\",\n",
+    "    y = \"Millenials/Generation X\",\n",
     "    x = \"Age\",\n",
     "    title=\"Fig. 1: Millenial Families Compared to Older Generations\",\n",
     "    hover_color=\"teal\",\n",
