--- a/real_cost_calculator.ipynb
+++ b/real_cost_calculator.ipynb
@@ -2,35 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c2063ee6",
+   "execution_count": 1,
+   "id": "c0257048",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing the required libraries and dependencies\n",
     "import os\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
     "import pandas as pd\n",
-    "import hvplot.pandas\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
     "import tkinter as tk\n",
-    "from tkinter import simpledialog\n",
-    "from pathlib import Path\n",
-    "from dotenv import load_dotenv\n",
-    "import sqlalchemy"
+    "from tkinter import simpledialog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5fab5ed8",
+   "execution_count": 2,
+   "id": "a7e36823",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interest is 15\n",
+      "amount is 2000\n",
+      "Period is monthly\n",
+      "Months is 2\n",
+      "2644.9999999999995\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "#\n",
     "\n",
     "# Dialog\n",
     "ROOT = tk.Tk()\n",
@@ -56,83 +60,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "940bc8d2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57474563",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02ab6881",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34c92b82",
+   "execution_count": 3,
+   "id": "402ad835",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Link to smartstartcredit.org (blog in development)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6f2c9b89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"800\"\n",
+       "            src=\"https://smartstartcredit.org\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fc99db0b090>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "from IPython.display import IFrame\n",
-    "IFrame(src=\"https://smartstartcredit.org\", width='100%', height='300')"
+    "IFrame(src=\"https://smartstartcredit.org\", width='100%', height='800')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64ecbc7e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20d31c30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a79f6ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60f86c5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a14fd11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a5da26a",
+   "id": "328ad5d3",
    "metadata": {},
    "outputs": [],
    "source": []
